[FIX] sap.m.ToggleButton: fix horizon style issues on mobile
Issue: The pressed emphasized toggle button looked wrong on mobile
because it was missing styling rules for the border, background, and
text colors.

BCP: 2370137200

--- a/src/themelib_sap_horizon/src/sap/m/themes/sap_horizon_hcb/ToggleButton.less
+++ b/src/themelib_sap_horizon/src/sap/m/themes/sap_horizon_hcb/ToggleButton.less
@@ -16,6 +16,12 @@ html.sap-desktop .sapMBtnDisabled .sapMTB-Transparent-CTX .sapMBtnInner.sapMTogg
 	background-color: @sapUiHcReducedBackground;
 }
 
+.sapMBtn .sapMBtnEmphasized.sapMToggleBtnPressed {
+	background-color: @sapUiButtonSelectedBackground;
+	color: @sapUiButtonSelectedTextColor;
+	border-color: @sapUiButtonSelectedBorderColor;
+}
+
 /* Icon in disabled toggled button */
 
 .sapMTB-Transparent-CTX span.sapMBtnInner.sapMToggleBtnPressed .sapMBtnIcon,
